# GDf4_boot

./: .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  build_app_quick.bat  compile_app.sh  flash.bat  flash_app.bat  flash_boot.bat
.cache/clangd/index/: AT24c256.c.88A79C4105EBEB5E.idx  AT24c256.h.2ED228655A138419.idx  boot.c.FD2808C81BE0E016.idx  boot.h.215B143EA14D7679.idx  core_cm4.h.E14EF76433B3DD49.idx  core_cm4_simd.h.9C13B1A34699BE37.idx  core_cmFunc.h.97524B9C3EF5BCED.idx  core_cmInstr.h.3D7BEEA586A51D9F.idx  delay.c.BF29AB217D6F6C24.idx  delay.h.AEEB429123C1868D.idx  fmc.c.27C8BCF88B53B1C5.idx  fmc.h.6E2CAE4943ED6542.idx  gd25q40e.c.2A7E1CDE3DFF2F5D.idx  gd25q40e.h.78297F1DC456226A.idx  gd32f4xx.h.DB194DADEBB143D8.idx  gd32f4xx_adc.c.A866A785D07BDBD1.idx  gd32f4xx_adc.h.1FB3CD4A6D1DED6D.idx  gd32f4xx_can.c.82F383EC63B7C396.idx  gd32f4xx_can.h.AED85F6D7A092D8C.idx  gd32f4xx_crc.c.C69E6AA759B569BB.idx  gd32f4xx_crc.h.95ECF42432916AC6.idx  gd32f4xx_ctc.c.9C52BD8E5C1CECE9.idx  gd32f4xx_ctc.h.6155387F3EA23939.idx  gd32f4xx_dac.c.2D1CA18CDC50D381.idx  gd32f4xx_dac.h.12ED253CDB31CC55.idx  gd32f4xx_dbg.c.AA6181AB328E0222.idx  gd32f4xx_dbg.h.2BAFCBD2A27F99F4.idx  gd32f4xx_dci.c.9300FE8400224F63.idx  gd32f4xx_dci.h.888268B803767BB8.idx  gd32f4xx_dma.c.32FAE09867D57469.idx  gd32f4xx_dma.h.F535A2CF46522D95.idx  gd32f4xx_enet.c.277362826DAAFE3F.idx  gd32f4xx_enet.h.E93ACBCD2AF7C74C.idx  gd32f4xx_exmc.c.F569612A917221FF.idx  gd32f4xx_exmc.h.0B4DC13ED239A3E3.idx  gd32f4xx_exti.c.20E4A200AA06D7FA.idx  gd32f4xx_exti.h.6EE685163E335600.idx  gd32f4xx_fmc.c.B6B2553D7F7A59E7.idx  gd32f4xx_fmc.h.520E71B518562CF2.idx  gd32f4xx_fwdgt.c.31A2BB74B80278EE.idx  (+49 more)
.claude/: settings.local.json
Driver/BSP/Include/: AT24c02.h  AT24c256.h  boot.h  esp8266.h  fmc.h  usart.h
Driver/BSP/Source/: AT24c02.c  AT24c256.c  boot.c  esp8266.c  fmc.c  gd25q40e.c  iic.c  usart.c
Driver/CMSIS/Source/: system_gd32f4xx.c
Driver/SYSTEM/Include/: delay.h
Driver/SYSTEM/Source/: delay.c  gd32f4xx_it.c
HMAC/inc/: utils_hmac.h  utils_sha1.h
HMAC/scr/: utils_hmac.c  utils_md5.c  utils_sha1.c
Project/: Boot.uvoptx  Boot.uvprojx  gd32f470xE_flash.ld
User/: main.c  main.h
app/: CMakeLists.txt  RTE_Components.h  gd32f470_app.ld  main.c  main.h
boot/: CMakeLists.txt  RTE_Components.h  main.c  main.h
cmake/: arm-none-eabi.cmake
shared/: .editorconfig
shared/BSP/Include/: AT24c256.h  boot.h  esp8266.h  gd25q40e.h  iic.h  mqtt.h  net_config.h  onenet_http_ota.h  ota_types.h  spi.h  usart.h
shared/BSP/Source/: AT24c256.c  boot.c  esp8266.c  fmc.c  gd25q40e.c  iic.c  mqtt.c  net_config.c  onenet_http_ota.c  spi.c  usart.c
shared/SYSTEM/Include/: systick.h
shared/SYSTEM/Source/: delay.c  gd32f4xx_it.c  systick.c
