cmake_minimum_required(VERSION 3.15)

# ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ compile_commands.json ๏ฟฝ๏ฟฝ IntelliSense สน๏ฟฝ๏ฟฝ
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝฤผ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ project() ึฎวฐ๏ฟฝ๏ฟฝ
set(CMAKE_TOOLCHAIN_FILE "${CMAKE_CURRENT_SOURCE_DIR}/../cmake/arm-none-eabi.cmake")

# -------------------------------------------------------------------------
# 1. ๏ฟฝ๏ฟฝฤฟ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ
# -------------------------------------------------------------------------
project(GDf4_app C ASM)

# -------------------------------------------------------------------------
# 2. GD32F470 ำฒ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ (Cortex-M4F)
# -------------------------------------------------------------------------
set(CPU_FLAGS
    -mcpu=cortex-m4
    -mthumb
    -mfloat-abi=hard
    -mfpu=fpv4-sp-d16
)

add_definitions(-DGD32F470)
add_definitions(-DUSE_STDPERIPH_DRIVER)
add_definitions(-DUSE_MQTT_TOKEN)

add_compile_options(
    ${CPU_FLAGS}
    -O2
    -g
    -Wall
    -Wextra
    -ffunction-sections
    -fdata-sections
)

# -------------------------------------------------------------------------
# 3. ๏ฟฝ๏ฟฝ๏ฟฝำฝลฑ๏ฟฝ๏ฟฝ๏ฟฝัก๏ฟฝ๏ฟฝ
# -------------------------------------------------------------------------
# APP ๏ฟฝ๏ฟฝ๏ฟฝำฝลฑ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝสผ๏ฟฝ๏ฟฝึท 0x08010000, 960K
set(LINKER_SCRIPT "${CMAKE_SOURCE_DIR}/gd32f470_app.ld")

add_link_options(
    ${CPU_FLAGS}
    -T${LINKER_SCRIPT}
    -Wl,-Map=${PROJECT_BINARY_DIR}/${PROJECT_NAME}.map
    -Wl,--gc-sections
    -specs=nosys.specs
)

# -------------------------------------------------------------------------
# 4. อท๏ฟฝฤผ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝยท๏ฟฝ๏ฟฝ
# -------------------------------------------------------------------------
set(SHARED_DIR "${CMAKE_SOURCE_DIR}/../shared")

include_directories(
    ${CMAKE_SOURCE_DIR}            # app/ ๏ฟฝยต๏ฟฝ main.h
    ${SHARED_DIR}/CMSIS/Include
    ${SHARED_DIR}/SYSTEM/Include
    ${SHARED_DIR}/BSP/Include
    ${SHARED_DIR}/LIB/Include
    ${CMAKE_SOURCE_DIR}/../HMAC/inc
)

# -------------------------------------------------------------------------
# 5. ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝิด๏ฟฝฤผ๏ฟฝ
# -------------------------------------------------------------------------
# APP ๏ฟฝิผ๏ฟฝ๏ฟฝ๏ฟฝิด๏ฟฝ๏ฟฝ
file(GLOB APP_SOURCES "${CMAKE_SOURCE_DIR}/*.c")

# ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝิด๏ฟฝ๏ฟฝ ๏ฟฝ๏ฟฝ ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝัก๏ฟฝ๑ฃฌฑ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟ1ค71๏ฟ1ค77 Boot ืจ๏ฟฝะด๏ฟฝ๏ฟฝ๏ฟฝ
# ๏ฟฝ๏ฟฝ๏ฟ1ค71๏ฟ1ค77 APP ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝาชฤณะฉ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝิด๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝฦณ๏ฟฝ
file(GLOB_RECURSE SHARED_SOURCES
    "${SHARED_DIR}/CMSIS/Source/*.c"
    "${SHARED_DIR}/LIB/Source/*.c"
    "${SHARED_DIR}/SYSTEM/Source/*.c"
    "${SHARED_DIR}/BSP/Source/usart.c"
    "${SHARED_DIR}/BSP/Source/spi.c"
    "${SHARED_DIR}/BSP/Source/iic.c"
    "${SHARED_DIR}/BSP/Source/gd25q40e.c"
    "${SHARED_DIR}/BSP/Source/AT24c256.c"
    "${SHARED_DIR}/BSP/Source/fmc.c"
    "${SHARED_DIR}/BSP/Source/esp8266.c"
    "${SHARED_DIR}/BSP/Source/net_config.c"
    "${SHARED_DIR}/BSP/Source/mqtt.c"
    "${SHARED_DIR}/BSP/Source/onenet_http_ota.c"
    "${SHARED_DIR}/HMAC/utils.c"
    # ืข๏ฟฝโฃบ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ boot.c๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ Bootloader ืจ๏ฟฝรต๏ฟฝ
)

file(GLOB HMAC_SOURCES "${CMAKE_SOURCE_DIR}/../HMAC/scr/*.c")

# ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟ1ค71๏ฟ1ค77
set(STARTUP_FILE "${CMAKE_SOURCE_DIR}/../Project/startup_gd32f450_470.S")

# -------------------------------------------------------------------------
# 6. ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝฤฟ๏ฟฝ๏ฟฝ๏ฟฝฤผ๏ฟฝ
# -------------------------------------------------------------------------
add_executable(${PROJECT_NAME}.elf
    ${APP_SOURCES}
    ${SHARED_SOURCES}
    ${HMAC_SOURCES}
    ${STARTUP_FILE}
)

# ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝิถ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟ1ค71๏ฟ1ค77 HEX, BIN ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝำก๏ฟฝฺด๏ฟฝีผ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟฝ๏ฟ1ค71๏ฟ1ค77
add_custom_command(TARGET ${PROJECT_NAME}.elf POST_BUILD
    COMMAND ${CMAKE_OBJCOPY} -O ihex  ${PROJECT_NAME}.elf ${PROJECT_NAME}.hex
    COMMAND ${CMAKE_OBJCOPY} -O binary ${PROJECT_NAME}.elf ${PROJECT_NAME}.bin
    COMMAND ${CMAKE_SIZE} --format=berkeley ${PROJECT_NAME}.elf
    COMMENT "Generating Flash images and showing size..."
)
